# chess-rust-tauri

./: .env  README.md  Schaken functioneel ontwerp.docx  Schaken technisch ontwerp.docx  how-to-run-test.txt  how-to-run.txt  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts  wat-gemaakt.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command_center.rs  game.rs  main.rs
src-tauri/src/board/: bitboard.rs  mod.rs  state.rs
src-tauri/src/helpers/: Random.rs  random.rs
src-tauri/src/moves/: IMove.rs  MagicMoves.rs  MoveGenerator.rs  magic_moves.rs  mod.rs  move_generator.rs  move_interfaces.rs  move_maker.rs  move_validator.rs
src-tauri/src/pieces/: Bishop.rs  IPiece.rs  King.rs  Knight.rs  Pawn.rs  Rook.rs  bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece_interfaces.rs  rook.rs
src-tauri/src/test/: fen_test.rs  ipc_helper.rs  math_test.rs  mod.rs  move_test.rs
ui/: fen_helper.ts  game.ts  index.html  main.ts  styles.css  tauri_requests.ts
ui/board/: chessboard.ts
ui/events/: window_events.ts
ui/requests/: tauri_requests.ts
ui/styles/: styles.css
