[package]
name = "chess"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["shell-open", "test"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
num-traits = "0.2.17"
num = "0.4.1"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
